--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,8 @@ jobs:
         DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
       shell: bash
       run: build/deploy -t ${{runner.temp}}/deploy_tmp -r mdadams/sg20_guidelines_for_teaching_cpp -i ${{runner.temp}}/output -z ${{github.ref}}
+    - name: Deploy internal
+      env:
+        DEPLOY_KEY: ${{secrets.ALT_DEPLOY_KEY}}
+      shell: bash
+      run: build/deploy -t ${{runner.temp}}/deploy_tmp_2 -r mdadams/SG20 -i ${{runner.temp}}/output -z ${{github.ref}}
