--- a/sources/Makefile
+++ b/sources/Makefile
@@ -103,7 +103,7 @@ knowledge_areas_summary.md: $(SOURCES) knowledge_areas.dat
 
 contributors.md:
 	rm -f $@
-	git log --pretty="%an; %ae" | sort | uniq | sed -e 's/@/ at /g' | sed -e 's/\./ dot /g' >> contributors.md
+	git log --all --pretty="%an; %ae" | sort | uniq | sed -e 's/@/ at /g' | sed -e 's/\./ dot /g' >> contributors.md
 
 ################################################################################
 # Establish Pandoc settings.
