--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+        fetch-depth: 0
     - name: Prebuild
       shell: bash
       run: tools/build/prebuild
