--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,19 @@ jobs:
       env:
         DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
       shell: bash
-      run: tools/build/deploy -f -t ${{runner.temp}}/deploy_tmp -r mdadams/sg20_guidelines_for_teaching_cpp -i ${{runner.temp}}/output -z ${{github.ref}}
+      run: |
+        tools/build/deploy \
+          -f -t ${{runner.temp}}/deploy_tmp \
+          -r mdadams/sg20_guidelines_for_teaching_cpp \
+          -i ${{runner.temp}}/output \
+          -z ${{github.ref}}
     - name: Deploy internal
       env:
         DEPLOY_KEY: ${{secrets.ALT_DEPLOY_KEY}}
       shell: bash
-      run: tools/build/deploy -f -t ${{runner.temp}}/deploy_tmp_2 -r mdadams/SG20 -i ${{runner.temp}}/output -z ${{github.ref}}
+      run: |
+        tools/build/deploy \
+          -f -t ${{runner.temp}}/deploy_tmp_2 \
+          -r mdadams/SG20 \
+          -i ${{runner.temp}}/output \
+          -z ${{github.ref}}
