--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Prebuild
+    - name: Prepare to build the document.
       shell: bash
       run: tools/build/prebuild
-    - name: Build
+    - name: Build the document.
       shell: bash
       run: tools/build/build -d ${{runner.temp}}/output -z ${{github.ref}} -s
