--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Prebuild
+    - name: Prepare to build the document.
       shell: bash
       run: tools/build/prebuild
-    - name: Build
+    - name: Build the document.
       shell: bash
       run: tools/build/build -d ${{runner.temp}}/output -z ${{github.ref}}
-    - name: Deploy
+    - name: Deploy the built document to a GitHub Pages branch (in a different repository).
       env:
         DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
       shell: bash
@@ -31,7 +31,7 @@ jobs:
           -r mdadams/sg20_guidelines_for_teaching_cpp \
           -i ${{runner.temp}}/output \
           -z ${{github.ref}}
-    - name: Deploy internal
+    - name: Deploy the built document to a GitHub Pages branch (in the same repository).
       env:
         DEPLOY_KEY: ${{secrets.ALT_DEPLOY_KEY}}
       shell: bash
