--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,17 +21,22 @@ jobs:
     - name: Build the document.
       shell: bash
       run: tools/build/build -d ${{runner.temp}}/output -z ${{github.ref}}
+    # The following deploys to a different branch of the same repository
+    # using an access token for authentication.
     - name: Deploy the built document to a GitHub Pages branch.
       env:
-        DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
+        DEPLOY_TOKEN: ${{secrets.DEPLOY_TOKEN}}
       shell: bash
       run: |
         tools/build/deploy \
           -f \
+          -m token \
           -t ${{runner.temp}}/deploy_tmp \
           -i ${{runner.temp}}/output \
           -r mdadams/SG20 \
           -z ${{github.ref}}
+    # The following deploys to a branch of a different repository
+    # using a deploy (i.e., SSH) key authentication.
     - name: Deploy the built document to a GitHub Pages branch.
       env:
         DEPLOY_KEY: ${{secrets.ALT_DEPLOY_KEY}}
@@ -39,6 +44,7 @@ jobs:
       run: |
         tools/build/deploy \
           -f \
+          -m key \
           -t ${{runner.temp}}/deploy_tmp_2 \
           -i ${{runner.temp}}/output \
           -r mdadams/sg20_guidelines_for_teaching_cpp \
