--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
       run: |
         tools/build/build \
           -d ${{runner.temp}}/output \
-          -v ${{github.ref}} \
+          -v ${GITHUB_REF#refs/*/} \
           -s
     ############################################################
