--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,86 +19,21 @@ jobs:
     - name: Prepare to build the document.
       shell: bash
       run: tools/build/prebuild
-    ####
+    ############################################################
     - name: Collect git metadata
       id: git_metadata
       run: |
         echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
-        #- name: Set git env vars
-        #  run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    ############################################################
-    - name: Test
-      run: |
-        echo $VERSION_TAG
-      env:
-        VERSION_TAG: ${{ steps.git_metadata.outputs.VERSION }}
     # The following builds the document in multiple formats for deployment.
     - name: Build the document.
       shell: bash
       run: |
         tools/build/build \
           -d ${{runner.temp}}/output \
-          -v $VERSION
-          #-z ${{github.ref}}
-      env:
-        VERSION: ${{ steps.git_metadata.outputs.VERSION }}
+          -v ${{ steps.git_metadata.outputs.VERSION }}
     - name: Deploy generated content to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ${{runner.temp}}/output
-        #keep_files: true
-      env:
-        VERSION: ${{ steps.git_metadata.outputs.VERSION }}
-
-        #destination_dir: $VERSION_TAG
-    ############################################################
-    # The following deploys to a different branch of the same repository
-    # using an access token for authentication.
-    # Note: It is recommended that this approach not be used.
-    #- name: Deploy the built document to a GitHub Pages branch.
-    #  env:
-    #    DEPLOY_TOKEN: ${{secrets.DEPLOY_TOKEN}}
-    #  shell: bash
-    #  run: |
-    #    tools/build/deploy \
-    #      -f \
-    #      -m token \
-    #      -t ${{runner.temp}}/deploy_tmp \
-    #      -i ${{runner.temp}}/output \
-    #      -r mdadams/SG20 \
-    #      -b gh-pages \
-    #      -z ${{github.ref}}
-    ############################################################
-    # The following deploys to a different branch of the same repository
-    # using a deploy (i.e., SSH) key for authentication.
-    #- name: Deploy the built document to a GitHub Pages branch.
-    #  env:
-    #    DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
-    #  shell: bash
-    #  run: |
-    #    tools/build/deploy \
-    #      -f \
-    #      -m key \
-    #      -t ${{runner.temp}}/deploy_tmp \
-    #      -i ${{runner.temp}}/output \
-    #      -r mdadams/SG20 \
-    #      -b gh-pages \
-    #      -z ${{github.ref}}
-    ############################################################
-    # The following deploys to a branch of a different repository
-    # using a deploy (i.e., SSH) key authentication.
-    # - name: Deploy the built document to a GitHub Pages branch.
-    #   env:
-    #     DEPLOY_KEY: ${{secrets.ALT_DEPLOY_KEY}}
-    #   shell: bash
-    #   run: |
-    #     tools/build/deploy \
-    #       -f \
-    #       -m key \
-    #       -t ${{runner.temp}}/deploy_tmp_2 \
-    #       -i ${{runner.temp}}/output \
-    #       -r mdadams/sg20_guidelines_for_teaching_cpp \
-    #       -b gh-pages \
-    #       -z ${{github.ref}}
-    ############################################################
+        keep_files: true
