--- a/sources/Makefile
+++ b/sources/Makefile
@@ -112,7 +112,7 @@ knowledge_areas_summary.md: $(SOURCES) knowledge_areas.dat
 	$(MAKE_MARKDOWN) < knowledge_areas.dat > knowledge_areas_summary.md
 
 contributors.md:
-	git log --all --pretty="%an" | sort | uniq > contributors.md
+	git log --all --pretty="%aN" | sort | uniq > contributors.md
 
 ################################################################################
 # Establish Pandoc settings.
