Implements main generator to automatically detect all modules

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ sources/guidelines.texi
 sources/guidelines_html/
 sources/knowledge_areas_summary.md
 sources/main.gen.md
+sources/main.pre.md
 sources/spellcheck_expected_sorted.txt
 sources/spellcheck_result.txt
