Adapt folder layout and finish pandoc integration (#69)
Completes the necessary folder layout rework and refactors pandoc file generation to work together with the rest of the tooling/setup. This finally finishes the pandoc integration to automatically generate teaching docs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
       run: |
         tools/build/build \
           -d ${{runner.temp}}/output \
-          -z ${{github.ref}} \
+          -v ${GITHUB_REF#refs/*/} \
           -s
     ############################################################
