--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,9 @@ jobs:
         tools/build/build \
           -d ${{runner.temp}}/output \
           -v ${{ steps.git_metadata.outputs.VERSION }}
-    - name: Deploy generated content to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ${{runner.temp}}/output
-        keep_files: true
+    #- name: Deploy generated content to gh-pages
+    #  uses: peaceiris/actions-gh-pages@v3
+    #  with:
+    #    github_token: ${{ secrets.GITHUB_TOKEN }}
+    #    publish_dir: ${{runner.temp}}/output
+    #    keep_files: true
