--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,6 @@ jobs:
       id: git_metadata
       run: |
         echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-        echo $GITHUB_OUTPUT
-        echo "${{ steps.git_metadata.outputs.VERSION }}"
-        echo "${{ steps.git_metadata.outputs.version }}"
     # The following builds the document in multiple formats for deployment.
     - name: Build the document.
       shell: bash
@@ -34,9 +31,9 @@ jobs:
         tools/build/build \
           -d ${{runner.temp}}/output \
           -v ${{ steps.git_metadata.outputs.VERSION }}
-    #- name: Deploy generated content to gh-pages
-    #  uses: peaceiris/actions-gh-pages@v3
-    #  with:
-    #    github_token: ${{ secrets.GITHUB_TOKEN }}
-    #    publish_dir: ${{runner.temp}}/output
-    #    keep_files: true
+    - name: Deploy generated content to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ${{runner.temp}}/output
+        keep_files: true
